# Sudoku_Class_Implementation

./: README.md  gitignore
dynamic_language_python/: environment.yml  main.py  testInTerminal.py  ui.py
dynamic_language_python/pyinstaller/: testInTerminal.spec  ui.spec
dynamic_language_python/qml/: main.qml
dynamic_language_python/sudoku/: __init__.py  grid.py  sudoku.py
dynamic_language_python/ui/: main.qml  rc_resources.py  resources.qrc  sudokuTableModel.py
static_language_c_plus_plus/: CMakeLists.txt
static_language_c_plus_plus/qml/: main.qml  qtquickcontrols2.conf
static_language_c_plus_plus/src/: main.cpp  sudokutablemodel.h
static_language_c_plus_plus/src/sudoku/: grid.cpp  grid.h  sudoku.cpp  sudoku.h
static_language_c_plus_plus/sudoku/: CMakeLists.txt  sudoku.cpp  sudoku.h
static_language_c_plus_plus/sudokuterminal/: CMakeLists.txt  main.cpp
static_language_c_plus_plus/sudokuui/: CMakeLists.txt  main.cpp  sudokutablemodel.cpp  sudokutablemodel.h
